--- a/src/style.css
+++ b/src/style.css
@@ -7,13 +7,14 @@ body{
 }
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
 }
-
+p {
+  font-family: Arial, serif;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
