--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  --background-color: #EDECEC;
+  --background-color: #d5cfc4;
 
 }
 body{
@@ -7,13 +7,14 @@ body{
 }
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
 }
-
+p {
+  font-family: Arial, serif;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -25,12 +26,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.card {
-  padding: 2em;
-}
-
 #app {
-  padding-top: 8vh;
   text-align: center;
 
 }
